--- a/Verificacioncrediticia/nbproject/project.properties
+++ b/Verificacioncrediticia/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
 excludes=
 file.reference.activation-1.1.1.jar=C:\\Users\\bitri\\Downloads\\activation-1.1.1.jar
 file.reference.javax.mail-api-1.6.2.jar=C:\\Users\\bitri\\Downloads\\javax.mail-api-1.6.2.jar
+file.reference.mail-1.4.7.jar=C:\\Users\\bitri\\Downloads\\mail-1.4.7.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +43,8 @@ javac.classpath=\
     ${libs.restapi.classpath}:\
     ${libs.restlib.classpath}:\
     ${file.reference.activation-1.1.1.jar}:\
-    ${file.reference.javax.mail-api-1.6.2.jar}
+    ${file.reference.javax.mail-api-1.6.2.jar}:\
+    ${file.reference.mail-1.4.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
