--- a/blacklist/nbproject/private/private.properties
+++ b/blacklist/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\saral\\AppData\\Roaming\\NetBeans\\12.6\\tomcat80.properties
+deploy.ant.properties.file=C:\\Users\\bitri\\AppData\\Roaming\\NetBeans\\17\\tomcat80.properties
+file.reference.activation-1.1.1__1_.jar=C:\\Users\\bitri\\Downloads\\activation-1.1.1 (1).jar
 j2ee.server.home=C:/xampp/tomcat
 j2ee.server.instance=tomcat80:home=C:\\xampp\\tomcat
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\saral\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+user.properties.file=C:\\Users\\bitri\\AppData\\Roaming\\NetBeans\\17\\build.properties
